# square-integration-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  example.env  pyproject.toml
app/: config.py  entrypoint.sh  main.py
app/apis/rest_api/api_v1/: routers.py
app/apis/rest_api/api_v1/endpoints/square/: auth.py
app/interfaces/https/: base_class.py
app/interfaces/https/square/: interface.py
app/services/utils/: decorators.py
