[tool.poetry]
name = "square-integration-service-v1.0"
version = "1.0.0"
description = ""
authors = ["semenov_sd@bk.ru"]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "0.78.0"
gunicorn = "20.1.0"
loguru = "0.6.0"
uvicorn = {extras = ["standard"], version = "0.17.6"}
aiohttp = {extras = ["speedups"], version = "3.8.1"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
